# visual-race-timing

./: .gitignore  README.md  annotate.py  collate.py  detect.py  main.py  pyproject.toml  requirements.txt  track.py  tracker_config.yaml
scripts/: get_point_in_video.py  render_video.py
visual_race_timing/: annotations.py  drawing.py  geometry.py  loader.py  logging.py  media_player.py  prompts.py  timecode.py  tracker.py  video.py  video_player.py
